<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:weightSum="1"
    tools:context="com.example.student.ce_refrigerator.Item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/back" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@drawable/title_1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="OK"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="25sp" />

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/camera"
        android:background="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ItemDetails_TextView"
            android:text="@string/Category" />

        <EditText style="@style/ItemDetails_EditView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ItemDetails_TextView"
            android:text="@string/ItemName" />


        <EditText style="@style/ItemDetails_EditView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ItemDetails_TextView"
            android:text="@string/productionDate" />

        <EditText style="@style/ItemDetails_EditViewDate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ItemDetails_TextView"
            android:text="@string/ExpirationDate" />

        <EditText style="@style/ItemDetails_EditViewDate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ItemDetails_TextView"
            android:text="@string/Amount" />

        <EditText
            style="@style/ItemDetails_EditViewAmount"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ItemDetails_TextView"
            android:text="@string/Compartment" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/ItemDetails_RadioButton"
                android:text="@string/Freezer" />

            <RadioButton
                style="@style/ItemDetails_RadioButton"
                android:text="@string/fridge" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ItemDetails_TextView"
            android:text="@string/Note" />

        <EditText style="@style/ItemDetails_EditView" />

    </LinearLayout>
</LinearLayout>
